week8/LogAggregationDemo/manifests/log-aggregation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-aggregation
  namespace: default
  labels:
    app: log-aggregation
spec:
  selector:
    matchLabels:
      app: log-aggregation
  replicas: 1
  template:
    # Describes the Pods that will be produced by this Deployment
    # This is a nested manifest for a Pod
    # Nested manifests do not need to include a kind or an apiVersion
    # But they do include metadata and spec
    metadata:
      labels:
        app: log-aggregation
    spec:
      containers:
      - name: project1
        image: ikenoxamos/pinpoint-demo:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent # Optional, since this is already the default value
