week8/LogAggregationDemo/manifests/log-aggregation-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: log-aggregation
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /log-aggregation/?(.*)
        backend:
          serviceName: log-aggregation
          servicePort: 8080
